# Omni_Boe_Robot

./: README.md
omni_diff/: CMakeLists.txt  package.xml
omni_diff/config/: joint_names_omni.yaml
omni_diff/launch/: display.launch  gazebo.launch  new_room.launch
omni_diff/maps/: hector_new_room.yaml  hector_turtlebot3_world.yaml  karto_new_room.pgm  karto_new_room.yaml  karto_turtlebot3_world.pgm  karto_turtlebot3_world.yaml  turtle_map_house.pgm  turtle_map_house.yaml
omni_diff/meshes/boe_bot/: base_caster_link.STL  base_link.STL  camera_link.STL  imu_link.STL  (+4 more)
omni_diff/urdf/: boe_bot.urdf  omni.urdf
omni_diff/worlds/: new_room.world
omni_diff_human_tracking/: CMakeLists.txt  package.xml
omni_diff_human_tracking/launch/: yolo_tracker.launch
omni_diff_human_tracking/scripts/: human_follower.py
omni_diff_navigation/: CMakeLists.txt  package.xml
omni_diff_navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
omni_diff_navigation/launch/: amcl.launch  move_base.launch  navigation.launch
omni_diff_navigation/rviz/: navigation.rviz
omni_diff_slam/: CMakeLists.txt  package.xml
omni_diff_slam/config/: joint_names_boe_bot.yaml
omni_diff_slam/launch/: omni_diff_hector_slam.launch  omni_diff_karto_slam.launch
omni_diff_slam/rviz/: hector_slam.rviz  karto_slam.rviz
omni_diff_teleop/: CMakeLists.txt  package.xml  setup.py
omni_diff_teleop/launch/: omni_diff_teleop_key.launch
omni_diff_teleop/nodes/: move.py  omni_diff_teleop_key
(+11 files in other folders)
